# sacr-parser

./: README.md  pyproject.toml
example/: 62.txt
src/sacr_parser/: parser.py  sacr.lark  utils.py
