[project]
authors = [{name = "Naitian Zhou", email = "naitian@naitian.org"}]
dependencies = ["lark>=1.2.2,<2"]
description = "Add a short description here"
name = "sacr-parser"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
sacr-parser = { path = ".", editable = true }

[tool.pixi.tasks]
